--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   image_picker: ^1.1.1
   provider: ^6.1.2
   path_provider: ^2.1.3
+  cloud_firestore: ^4.17.4
 
 
   # The following adds the Cupertino Icons font to your application.
