Todays updated code on date 8-06-2024

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -110,7 +110,7 @@ flutter:
       - assets/images/cart1.png
       - assets/images/dairymilk.png
       - assets/images/dairymilk1.webp
-      - assets/images/lays1.webp
+      - assets/images/lays.png
       - assets/images/pepsi.webp
       - assets/images/odonil.webp
       - assets/images/odonil.jpg
