--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,9 +46,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
-  firebase_core: ^2.25.4
+  firebase_core: ^2.32.0
   firebase_auth: ^4.16.0
   pinput: ^3.0.1
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
